--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ cache: npm
 
 before_install:
   - ls -la
-  - npm install
   - pwd
   - echo "Something"
+  - mkdir dist 
+  - cd dist
+  - ls -la
+
+install:
+  - ls -la
+  - npm install
+  - ls -la
 
 notifications:
   slack:
