--- a/package.json
+++ b/package.json
@@ -66,5 +66,14 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-spring": "^8.0.27"
+  },
+  "scripts": {
+      "format": "prettier \"src/**/*.{js,html}\" --write",
+      "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+      "test": "npm run format && npm run lint",
+      "start": "webpack-dev-server --mode development --open",
+      "dev": "webpack --mode development --module-bind js=babel-loader",
+      "build": "webpack --mode production --module-bind js=babel-loader",
+      "mock:api": "./node_modules/.bin/json-server --watch ./src/js/services/api/mockDb.json --port 4000 & npm run start"
   }
 }
