--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ cache: npm
 install:
   - npm install
 
+before_install:
+  - "npm config set spin false"
+  - npm i -g now
+
+
+
+
 script:
   - npm run build
   - npm run test
